--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -505,6 +505,9 @@ input[type="checkbox"][readonly] {
   box-shadow: 0 0 6px white;
 }
 
+.form-actions .btn {
+  margin-bottom: 15px;
+}
 .form-actions .btn:not(:last-child) {
   margin-right: 15px;
 }
@@ -10518,6 +10521,11 @@ div.vertical-tabs {
   position: relative;
   /* IE6/7 */
   clear: both;
+}
+@media (min-width: 1px) and (max-width: 740px) {
+  div.vertical-tabs {
+    display: none;
+  }
 }
 
 .vertical-tabs ul.vertical-tabs-list {
